# resource-generator

./: .gitignore  .gitmodules  Cargo.toml  Containerfile  README.md
.github/workflows/: release.yaml
src/: kind.rs  main.rs
src/kind/: game_object.rs  image.rs  localization.rs  localized_image.rs  map.rs  multiframe_texture.rs  object3d.rs  proplib.rs  sound.rs  swf_library.rs  texture.rs
