[package]
name = "resource-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
araumi_protocol = { git = "https://github.com/AraumiTO/protocol", rev = "c281465", features = ["derive"] }
async-trait = "0.1.72"
crc = "3.0.1"
git2 = "0.17.2"
quick-xml = { version = "0.30.0", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tara = { git = "https://github.com/AraumiTO/tara", rev = "6e8620f" }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "net", "macros", "io-util", "sync", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.3.3"
