[package]
name = "resource-generator"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
threedee = { git = "https://github.com/NarukamiTO/threedee", rev = "84c4b8f" }
alternativa_protocol = { features = ["derive"], git = "https://github.com/NarukamiTO/protocol", rev = "0ac0269" }
async-trait = "0.1.72"
crc = "3.0.1"
git2 = "0.17.2"
quick-xml = { version = "0.30.0", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_path_to_error = "0.1.16"
serde_yaml = "0.9.25"
tara = { git = "https://github.com/NarukamiTO/tara", rev = "5573d3a" }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "net", "macros", "io-util", "sync", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.3.3"
